# opencv_haar_detection

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
data/: cascades.txt  templates.txt
data/cascades/: add_post.xml  home.xml  igtv.xml  like.xml  profile.xml  save.xml  search.xml  share.xml  story.xml
detector/: CMakeLists.txt  cascade.cpp  cascade.h  result.cpp  result.h  template.cpp  template.h
doc/: Doxyfile
doc/html/: annotated.html  cascade_8h.html  cascade_8h_source.html  classdt_1_1_result-members.html  classdt_1_1_result.html  classdt_1_1_template-members.html  classdt_1_1_template.html  classes.html  dir_5d4dd8472a32e68fa21655aaca715497.html  dir_7088f86a5435f1a1ce5586cf94599adc.html  files.html  functions.html  functions_func.html  functions_vars.html  namespacedt.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  result_8h.html  result_8h_source.html  structdt_1_1_named_cascade-members.html  structdt_1_1_named_cascade.html  template_8h.html  template_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
doc/latex/: annotated.tex  cascade_8h.tex  classdt_1_1_result.tex  classdt_1_1_template.tex  files.tex  namespacedt.tex  namespaces.tex  refman.tex  result_8h.tex  structdt_1_1_named_cascade.tex  template_8h.tex
